<resources>
    <string name="app_name">P1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ny_inkomst">Ny Inkomst</string>
    <string name="ny_utgift">Ny Utgift</string>
    <string name="sammanst_llning_av_ekonomi">Sammanställning av ekonomi</string>
    <string name="l_gg_till_ny_inkomst">Lägg till ny inkomst</string>
    <string name="kategori">Kategori:</string>
    <string name="datum">Datum:</string>
    <string name="titel">Titel:</string>
    <string name="belopp">Belopp:</string>
    <string name="namn">Förnamn:</string>
    <string name="efternamn">Efternamn:</string>
    <string name="logga_in">Logga in</string>
    <string name="inkomst">Inkomster:</string>
    <string name="utgifter">Utgifter:</string>
    <string name="v_lkommen">Välkommen </string>
    <string name="se_dina_inkomster">Se dina inkomster</string>
    <string name="se_dina_utgifter">Se dina utgifter</string>
    <string name="sammanst_llning">Sammanställning:</string>
    <string name="l_gg_till">Lägg till</string>
    <string name="inkomster">Inkomster</string>
    <string name="v_lj_ditt_tidsintevall">Välj ditt tidsintevall</string>
    <string name="fr_n_datum">Från Datum</string>
    <string name="till_datum">Till Datum</string>
    <string name="v_lj_r">Välj år:</string>
    <string name="v_lj_m_nad">Välj månad:</string>
    <string name="inkomster_vald_m_nad">Inkomster vald månad:</string>
    <string name="utgifter_vald_m_nad">Utgifter vald månad:</string>
    <string name="m_nadens_resultat">Månadens resultat:</string>

    <string-array name="Income_category">
        <item>Lön</item>
        <item>Övrigt</item>
    </string-array>

    <string-array name="Expense_category">
        <item>Livsmedel</item>
        <item>Fritid</item>
        <item>Resor</item>
        <item>Boende</item>
        <item>Övrigt</item>
    </string-array>
    <string-array name="Year">
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
    </string-array>

    <string-array name="month">
        <item>Januari</item>
        <item>Februari</item>
        <item>Mars</item>
        <item>April</item>
        <item>Maj</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Augusti</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
