


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.henrik.p1.Fragment_ViewIncome">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inkomster"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_lj_ditt_tidsintevall"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnIncomeFromDate"
         android:text="@string/fr_n_datum" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnIncomeToDate"
            android:text="@string/till_datum" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Välj"
            android:id="@+id/btnChooseIncome"
            android:layout_marginLeft="8dp" />

    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lvIncomeView">


    </ListView>


</LinearLayout>



