<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context="com.example.henrik.p1.FragmentIncome"
        android:weightSum="1">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Lägg till ny Utgift"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_margin="14dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:id="@+id/textView2" />

            <Spinner
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerExpense"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titel"/>
            <EditText
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/etExpenseTitel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pris"/>
            <EditText
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPrice"
                android:inputType="number" />
        </LinearLayout>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calendarExpense"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_gg_till"
            android:id="@+id/btnInsertExpense"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</ScrollView>
